--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
+            <p>Proficient data solution provider for complex business problem with extensive experience in enterprise level data lake / data warehouse architecture, design, and development. Specialized in Machine learning concepts, model building, validation, real-time and batch resilient data pipeline creation for trustable Analytics data platform using modern cloud data engineering strategies with continuous integration and delivery.
+</p>
             <h2>Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem.</p>
+            <p>DATAWAREHOUSING,ETL Design,Datawarehouse Architecture Data Modelling,Serverless design,Data Lake development Data Modelling,Data Quality
+,Data Governance,Reporting,Distributed Systems
+DATA SCIENCE -Supervised and Unsupervised Machine Learning Models Exploratory Data Analysis Data Mining,NLP,Deep Learning A/B Testing</p>
 
             <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
+            <p>PROGRAMMING-Python,Spark,R,SQL  DATABASES-Snowflake,Oracle,DynamoDB,Teradata CLOUD-AWS BIG DATA-Hadoop,Kafka  ETL TOOL-Informatica,Qlik Replicate  REPORTING-Tableau,Spotfire,Kibana  DEVOPS-Jenkins,CirclCI,Git OTHER TOOLS-Terraform,Airflow</p>
             <h2>Projects</h2>
             <a href="#">Project 1</a>
             <a href="#">Project 2</a>
@@ -32,7 +35,7 @@
             <a href="#">Project 4</a>
             <a href="#">Project 5</a>
             <h2>Contact</h2>
-            <p>myEmail@email.com</p>
+            <p>avishek.roy@gmail.com</p>
         </div>
     </div>
 </body>
