--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
             <a href="https://av1ro.github.io/"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
-            <h2>About</h2>
+            <h3>About</h3>
             <p>Proficient data solution provider for complex business problem with extensive experience in enterprise level data lake / data warehouse architecture, design, and development. Specialized in Machine learning concepts, model building, validation, real-time and batch resilient data pipeline creation for trustable Analytics data platform using modern cloud data engineering strategies with continuous integration and delivery.
 </p>
-            <h2>Experience</h2>
+            <h3>Experience</h3>
             <p>DATAWAREHOUSING,ETL Design,Datawarehouse Architecture Data Modelling,Serverless design,Data Lake development Data Modelling,Data Quality
 ,Data Governance,Reporting,Distributed Systems
 DATA SCIENCE -Supervised and Unsupervised Machine Learning Models Exploratory Data Analysis Data Mining,NLP,Deep Learning A/B Testing</p>
 
-            <h2>Skills</h2>
+            <h3>Skills</h3>
             <p>PROGRAMMING-Python,Spark,R,SQL  DATABASES-Snowflake,Oracle,DynamoDB,Teradata CLOUD-AWS BIG DATA-Hadoop,Kafka  ETL TOOL-Informatica,Qlik Replicate  REPORTING-Tableau,Spotfire,Kibana  DEVOPS-Jenkins,CirclCI,Git OTHER TOOLS-Terraform,Airflow</p>
-            <h2>Projects</h2>
-            <a href="#">Project 1</a>
-            <a href="#">Project 2</a>
-            <a href="#">Project 3</a>
+            <h3>Projects</h3>
+            <a href="https://github.com/av1ro/Clustering">Clustering - where to open a gym</a>
+            <a href="https://github.com/av1ro/Regression-Models">Regression model - VIX with Stock price change</a>
+            <a href="https://github.com/av1ro/Sentiment-Analysis">Sentiment analysis - News headline</a>
             <a href="#">Project 4</a>
             <a href="#">Project 5</a>
             <h2>Contact</h2>
