--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <h3>Experience</h3>
             <p>DATAWAREHOUSING,ETL Design,Datawarehouse Architecture Data Modelling,Serverless design,Data Lake development Data Modelling,Data Quality
 ,Data Governance,Reporting,Distributed Systems
-DATA SCIENCE -Supervised and Unsupervised Machine Learning Models Exploratory Data Analysis Data Mining,NLP,Deep Learning A/B Testing</p>
+<br>DATA SCIENCE -Supervised and Unsupervised Machine Learning Models Exploratory Data Analysis Data Mining,NLP,Deep Learning A/B Testing</p>
 
             <h3>Skills</h3>
-            <p>PROGRAMMING-Python,Spark,R,SQL  DATABASES-Snowflake,Oracle,DynamoDB,Teradata CLOUD-AWS BIG DATA-Hadoop,Kafka  ETL TOOL-Informatica,Qlik Replicate  REPORTING-Tableau,Spotfire,Kibana  DEVOPS-Jenkins,CirclCI,Git OTHER TOOLS-Terraform,Airflow</p>
+            <p>PROGRAMMING-Python,Spark,R,SQL  DATABASES-Snowflake,Oracle,DynamoDB,Teradata CLOUD-AWS BIG DATA-Hadoop,Kafka  ETL TOOL-Informatica,Qlik Replicate  <br>REPORTING-Tableau,Spotfire,Kibana  DEVOPS-Jenkins,CirclCI,Git OTHER TOOLS-Terraform,Airflow</p>
             <h3>Projects</h3>
             <a href="https://github.com/av1ro/Clustering">Clustering - where to open a gym</a>
             <br> 
@@ -36,7 +36,18 @@ DATA SCIENCE -Supervised and Unsupervised Machine Learning Models Exploratory Da
             <a href="https://github.com/av1ro/Sentiment-Analysis">Sentiment analysis - News headline</a>
             <br> 
             <a href="#">Project 4</a>
+            <br>
             <a href="#">Project 5</a>
+            <br>
+            <a href="#">Project 6</a>
+            <br>
+            <a href="#">Project 7</a>
+            <br>
+            <a href="#">Project 8</a>
+            <br>
+            <a href="#">Project 9</a>
+            <br>
+            <a href="#">Project 10</a>
             <h2>Contact</h2>
             <p>avishek.roy@gmail.com</p>
         </div>
