--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <br> 
             <a href="https://github.com/av1ro/Sentiment-Analysis">Sentiment analysis - News headline</a>
             <br> 
-            <a href="#">Project 4</a>
+            <a href="https://github.com/av1ro/Predictive-Analysis">Predictive Analysis - Using ARIMA 4</a>
             <br>
             <a href="#">Project 5</a>
             <br>
@@ -50,6 +50,7 @@
             <a href="#">Project 10</a>
             <h2>Contact</h2>
             <p>avishek.roy@gmail.com</p>
+            <p>773-742-0206</p>
         </div>
     </div>
 </body>
