--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Your Name</title>
 </head>
-<body>
+<body><font face='verdana'>
     <div class="grid-2">
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
@@ -53,5 +53,5 @@
             <p>773-742-0206</p>
         </div>
     </div>
-</body>
+</font></body>
 </html>
