--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <br> 
             <a href="https://github.com/av1ro/Sentiment-Analysis">Sentiment analysis - News headline</a>
             <br> 
-            <a href="https://github.com/av1ro/Predictive-Analysis">Predictive Analysis - Using ARIMA 4</a>
+            <a href="https://github.com/av1ro/Predictive-Analysis">Predictive Analysis - Using ARIMA </a>
             <br>
             <a href="#">Project 5</a>
             <br>
