--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@
             <p>PROGRAMMING-Python,Spark,R,SQL  DATABASES-Snowflake,Oracle,DynamoDB,Teradata CLOUD-AWS BIG DATA-Hadoop,Kafka  ETL TOOL-Informatica,Qlik Replicate  <br>REPORTING-Tableau,Spotfire,Kibana  DEVOPS-Jenkins,CirclCI,Git OTHER TOOLS-Terraform,Airflow</p>
             <h3>Projects</h3>
             <a href="https://github.com/av1ro/Clustering">Clustering - where to open a gym</a>
-            <br> 
+            <br>
             <a href="https://github.com/av1ro/Regression-Models">Regression model - VIX with Stock price change</a>
-            <br> 
+            <br>
             <a href="https://github.com/av1ro/Sentiment-Analysis">Sentiment analysis - News headline</a>
-            <br> 
+            <br>
             <a href="https://github.com/av1ro/Predictive-Analysis">Predictive Analysis - Using ARIMA </a>
             <br>
-            <a href="#">Project 5</a>
+            <a href="https://github.com/av1ro/Decision-Trees">Bike Rental prediction - Decision tress and random forest</a>
             <br>
-            <a href="#">Project 6</a>
+            <a href="https://github.com/av1ro/Neural-networks-and-KNN">Price Prediction using Keras</a>
             <br>
-            <a href="#">Project 7</a>
+            <a href="https://github.com/av1ro/Exploratory-Data-Anslysis">Exploratory Data Analysis</a>
             <br>
-            <a href="#">Project 8</a>
+            <a href="https://github.com/av1ro/Image-classifier">Classifying images</a>
             <br>
-            <a href="#">Project 9</a>
+            <a href="https://github.com/av1ro/statistics-course-project">Statistics course project</a>
             <br>
-            <a href="#">Project 10</a>
+            <a href="https://github.com/av1ro/workshop">AWS Machine learning pipeline</a>
             <h3>Contact</h3>
             <p>avishek.roy@gmail.com</p>
             <p>773-742-0206</p>
